[package]
name        = "http-box"
version     = "0.1.0"
authors     = ["Sean Kerr <sean@metatomic.io>"]
license     = "Apache-2.0"
description = "Fast push/callback oriented HTTP parser"
homepage    = "https://github.com/seankerr/rust-http-box"
repository  = "https://github.com/seankerr/rust-http-box"
readme      = "README.md"
keywords    = ["http", "parser", "callback", "push"]
exclude     = [".gitignore"]
build       = "build.rs"

[dependencies]
byte-slice = "0.1.11"
#byte-slice = { path = "../rust-byte-slice" }

[build-dependencies]
skeptic = "0.6.1"

[dev-dependencies]
byte-slice = "*"
#byte-slice = { path = "../rust-byte-slice" }
#clippy     = "*"
skeptic    = "*"
